--- a/src/e_cidadania/apps/accounts/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/accounts/locale/es_ES/LC_MESSAGES/django.po
@@ -1,21 +1,22 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
+# Oscar Carballal <oscar@cidadania.coop>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: e-cidadania 0.1.5\n"
-"Report-Msgid-Bugs-To: oscar.carballal@cidadania.coop\n"
-"POT-Creation-Date: 2012-02-28 17:13+0100\n"
-"PO-Revision-Date: 2012-01-05 11:07\n"
-"Last-Translator:   <oscar.carballal@cidadania.coop>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: es_ES (Spanish)\n"
+"Project-Id-Version: e-cidadania\n"
+"Report-Msgid-Bugs-To: http://dev.ecidadania.org/\n"
+"POT-Creation-Date: 2012-01-04 17:33+0100\n"
+"PO-Revision-Date: 2012-02-29 08:20+0000\n"
+"Last-Translator: Oscar Carballal <oscar@cidadania.coop>\n"
+"Language-Team: Spanish (Spain) (http://www.transifex.net/projects/p/ecidadania/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: es_ES\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: models.py:33
 msgid "Male"
@@ -92,3 +93,7 @@ msgstr "DNI"
 #: models.py:83
 msgid "Website"
 msgstr "Página web"
+
+#: models.py:85
+msgid "The URL will be checked"
+msgstr ""
