--- a/src/e_cidadania/apps/cal/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/cal/locale/gl_ES/LC_MESSAGES/django.po
@@ -1,58 +1,59 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
+# Oscar Carballal <oscar@cidadania.coop>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-02-28 17:13+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Project-Id-Version: e-cidadania\n"
+"Report-Msgid-Bugs-To: http://dev.ecidadania.org/\n"
+"POT-Creation-Date: 2012-01-04 17:33+0100\n"
+"PO-Revision-Date: 2012-02-29 08:53+0000\n"
+"Last-Translator: Oscar Carballal <oscar@cidadania.coop>\n"
+"Language-Team: Galician (Spain) (http://www.transifex.net/projects/p/ecidadania/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: gl_ES\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
-#: templates/cal/calendar.html:4 templates/cal/calendar.html.py:16
+#: templates/cal/calendar.html:4 templates/cal/calendar.html.py:14
 msgid "Calendar"
-msgstr ""
+msgstr "Calendario"
+
+#: templates/cal/calendar.html:20
+msgid "Previous month"
+msgstr "Mes anterior"
 
 #: templates/cal/calendar.html:21
-msgid "Previous month"
-msgstr ""
+msgid "Next month"
+msgstr "Mes seguinte"
 
 #: templates/cal/calendar.html:22
-msgid "Next month"
-msgstr ""
-
-#: templates/cal/calendar.html:23
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
 
-#: templates/cal/error.html:4 templates/cal/error.html.py:9
+#: templates/cal/error.html:4
 msgid "Calendar error"
-msgstr ""
+msgstr "Erro do calendario"
+
+#: templates/cal/error.html:8
+msgid "You entered and incorrect month or year. Please correct it."
+msgstr "Escribiches un ano ou un mes incorrectos. Corríxeo, por favor."
 
 #: templates/cal/error.html:10
-msgid "You entered and incorrect month or year. Please correct it."
-msgstr ""
-
-#: templates/cal/error.html:11
 msgid "You can go"
-msgstr ""
+msgstr "Podes ir"
 
-#: templates/cal/error.html:11
+#: templates/cal/error.html:10
 msgid "back to home"
-msgstr ""
+msgstr "de volta ao inicio"
 
-#: templates/cal/error.html:11
+#: templates/cal/error.html:10
 msgid "or"
-msgstr ""
+msgstr "ou"
 
-#: templates/cal/error.html:11
+#: templates/cal/error.html:10
 msgid "back to your profile"
-msgstr ""
+msgstr "de volta ao teu perfil"
