--- a/src/e_cidadania/apps/debate/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/debate/locale/gl_ES/LC_MESSAGES/django.po
@@ -1,202 +1,164 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
+# Oscar Carballal <oscar@cidadania.coop>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-02-28 17:13+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Project-Id-Version: e-cidadania\n"
+"Report-Msgid-Bugs-To: http://dev.ecidadania.org/\n"
+"POT-Creation-Date: 2012-01-04 17:33+0100\n"
+"PO-Revision-Date: 2012-02-29 08:59+0000\n"
+"Last-Translator: Oscar Carballal <oscar@cidadania.coop>\n"
+"Language-Team: Galician (Spain) (http://www.transifex.net/projects/p/ecidadania/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: gl_ES\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
-#: models.py:43 models.py:110
+#: models.py:41 models.py:102
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
-#: models.py:44 templates/debate/debate_view.html:104
+#: models.py:42 templates/debate/debate_view.html:104
 msgid "Description"
-msgstr ""
+msgstr "Descrición"
 
-#: models.py:45
+#: models.py:43
 msgid "Scope"
-msgstr ""
+msgstr "Ámbito"
 
-#: models.py:48 models.py:113
+#: models.py:46 models.py:105
 msgid "Date created"
-msgstr ""
+msgstr "Data de creación"
+
+#: models.py:47
+msgid "Last update"
+msgstr "Ultima actualización"
 
 #: models.py:49
-msgid "Last update"
-msgstr ""
-
-#: models.py:51
 msgid "Start date"
-msgstr ""
+msgstr "Data de comezo"
 
-#: models.py:52
+#: models.py:50
 msgid "End date"
-msgstr ""
+msgstr "Data de fin"
 
-#: models.py:77 models.py:91
+#: models.py:69 models.py:83
 msgid "Criteria"
-msgstr ""
+msgstr "Criterio"
 
-#: models.py:111
+#: models.py:103
 msgid "Message"
-msgstr ""
+msgstr "Mensaxe"
 
-#: models.py:116
+#: models.py:108
 msgid "Last modification time"
-msgstr ""
+msgstr "Hora da última modificación"
 
 #: templates/debate/debate_add.html:4
 #: templates/debate/debate_add_simple.html:4
+#: templates/debate/debate_board.html:4
 msgid "Create new debate"
-msgstr ""
+msgstr "Crear novo debate"
 
-#: templates/debate/debate_add.html:24
+#: templates/debate/debate_add.html:24 templates/debate/debate_board.html:16
 msgid "Create a new debate"
-msgstr ""
+msgstr "Crear un novo debate"
 
-#: templates/debate/debate_add.html:33
+#: templates/debate/debate_add.html:33 templates/debate/debate_board.html:23
 msgid "Remove column"
-msgstr ""
+msgstr "Eliminar columna"
 
-#: templates/debate/debate_add.html:34
+#: templates/debate/debate_add.html:34 templates/debate/debate_board.html:24
 msgid "Add column"
-msgstr ""
+msgstr "Engadir columna"
 
-#: templates/debate/debate_add.html:63
+#: templates/debate/debate_add.html:63 templates/debate/debate_board.html:56
 msgid "Remove row"
-msgstr ""
+msgstr "Eliminar fila"
 
-#: templates/debate/debate_add.html:64
+#: templates/debate/debate_add.html:64 templates/debate/debate_board.html:57
 msgid "Add row"
-msgstr ""
+msgstr "Engadir fila"
 
 #: templates/debate/debate_add.html:67
 #: templates/debate/debate_add_simple.html:60
+#: templates/debate/debate_board.html:66
 msgid "Other debate data"
-msgstr ""
+msgstr "Outros datos do debate"
 
 #: templates/debate/debate_add.html:127
 #: templates/debate/debate_add_simple.html:120
-#: templates/debate/debate_view.html:115
+#: templates/debate/debate_board.html:109
+#: templates/debate/debate_view.html:116
 msgid "Save"
-msgstr ""
+msgstr "Gardar"
 
 #: templates/debate/debate_add.html:128
 #: templates/debate/debate_add_simple.html:121
+#: templates/debate/debate_board.html:110
 msgid "Cancel"
-msgstr ""
+msgstr "Cancelar"
 
-#: templates/debate/debate_list.html:4
+#: templates/debate/debate_board.html:61 templates/debate/debate_view.html:120
+msgid "Add new note"
+msgstr "Engadir nova nota"
+
+#: templates/debate/debate_board.html:62
+msgid "Add phase"
+msgstr "Engadir fase"
+
+#: templates/debate/debate_list.html:4 templates/debate/debate_list.html:12
 msgid "Debates in "
-msgstr ""
+msgstr "Debates en"
 
-#: templates/debate/debate_list.html:10
-msgid "Debates in"
-msgstr ""
-
-#: templates/debate/debate_list.html:18
+#: templates/debate/debate_list.html:21
 msgid "There are no debates."
-msgstr ""
+msgstr "Non hai debates."
 
-#: templates/debate/debate_list.html:22
+#: templates/debate/debate_list.html:25
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
 
-#: templates/debate/debate_list.html:28
+#: templates/debate/debate_list.html:32
 msgid "previous"
-msgstr ""
+msgstr "anterior"
 
-#: templates/debate/debate_list.html:31
+#: templates/debate/debate_list.html:35
 msgid "of"
-msgstr ""
+msgstr "de"
 
-#: templates/debate/debate_list.html:34
+#: templates/debate/debate_list.html:38
 msgid "next"
-msgstr ""
-
-#: templates/debate/debate_outdated.html:4
-#: templates/debate/debate_outdated.html:16
-msgid "Can't view this debate"
-msgstr ""
-
-#: templates/debate/debate_outdated.html:17
-msgid ""
-"It seems that the debate you're trying to access is either <strong>not "
-"started</strong> or it <strong>expired</strong>."
-msgstr ""
-
-#: templates/debate/debate_outdated.html:20
-msgid "Started on:"
-msgstr ""
-
-#: templates/debate/debate_outdated.html:23
-msgid "Finished on:"
-msgstr ""
+msgstr "seguinte"
 
 #: templates/debate/debate_view.html:5
 msgid "View debate"
-msgstr ""
-
-#: templates/debate/debate_view.html:23
-msgid "Description:"
-msgstr ""
-
-#: templates/debate/debate_view.html:24
-msgid "Scope:"
-msgstr ""
-
-#: templates/debate/debate_view.html:27
-msgid "Start date:"
-msgstr ""
-
-#: templates/debate/debate_view.html:27 templates/debate/debate_view.html:28
-msgid "No date"
-msgstr ""
+msgstr "Ver debate"
 
 #: templates/debate/debate_view.html:28
-msgid "End date:"
-msgstr ""
+msgid "Description:"
+msgstr "Descrición:"
 
-#: templates/debate/debate_view.html:68
-msgid "Delete note"
-msgstr ""
+#: templates/debate/debate_view.html:29
+msgid "Scope:"
+msgstr "Ámbito:"
 
-#: templates/debate/debate_view.html:72
-msgid "View"
-msgstr ""
-
-#: templates/debate/debate_view.html:74
+#: templates/debate/debate_view.html:75
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: templates/debate/debate_view.html:91
 msgid "Edit note"
-msgstr ""
+msgstr "Editar nota"
 
 #: templates/debate/debate_view.html:97
 msgid "Note title"
-msgstr ""
+msgstr "Título da nota"
 
 #: templates/debate/debate_view.html:100
 msgid "100 characters"
-msgstr ""
-
-#: templates/debate/debate_view.html:122
-msgid "View note"
-msgstr ""
-
-#: templates/debate/debate_view.html:132
-msgid "Add new note"
-msgstr ""
+msgstr "100 caracteres"
