--- a/src/e_cidadania/apps/proposals/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/proposals/locale/gl_ES/LC_MESSAGES/django.po
@@ -1,211 +1,212 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
+# Oscar Carballal <oscar@cidadania.coop>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-02-28 17:13+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Project-Id-Version: e-cidadania\n"
+"Report-Msgid-Bugs-To: http://dev.ecidadania.org/\n"
+"POT-Creation-Date: 2012-01-04 17:33+0100\n"
+"PO-Revision-Date: 2012-02-29 11:35+0000\n"
+"Last-Translator: Oscar Carballal <oscar@cidadania.coop>\n"
+"Language-Team: Galician (Spain) (http://www.transifex.net/projects/p/ecidadania/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: gl_ES\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: admin.py:45
 msgid "Location"
-msgstr ""
+msgstr "Localización"
 
 #: admin.py:48
 msgid "Relations"
-msgstr ""
+msgstr "Relacións"
 
 #: admin.py:51
 msgid "Other"
-msgstr ""
+msgstr "Outro"
 
 #: admin.py:54
 msgid "Options"
-msgstr ""
+msgstr "Opcións"
 
 #: models.py:37
 msgid "Economically not viable"
-msgstr ""
+msgstr "Económicamente non viable"
 
 #: models.py:38
 msgid "Legally not viable"
-msgstr ""
+msgstr "Legalmente non viable"
 
 #: models.py:39
 msgid "Technically not viable"
-msgstr ""
+msgstr "Técnicamente non viable"
 
 #: models.py:40
 msgid "Offtopic"
-msgstr ""
+msgstr "Fora de tópico"
 
 #: models.py:48 models.py:81 templates/proposals/proposal_add.html:135
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
 #: models.py:79
 msgid "Code"
-msgstr ""
+msgstr "Código"
 
 #: models.py:82 templates/proposals/proposal_add.html:136
 msgid "Description"
-msgstr ""
+msgstr "Descrición"
 
 #: models.py:88
 msgid "Latitude"
-msgstr ""
+msgstr "Latitude"
 
 #: models.py:90
 msgid "Longitude"
-msgstr ""
+msgstr "Lonxitude"
 
 #: models.py:98
 msgid "Votes from"
-msgstr ""
+msgstr "Votos de"
 
 #: models.py:116
 msgid "Proposal"
-msgstr ""
+msgstr "Proposta"
 
 #: models.py:117
 msgid "Proposals"
-msgstr ""
+msgstr "Propostas"
 
 #: templates/proposals/proposal_add.html:5
 #: templates/proposals/proposal_list.html:17
 msgid "Add proposal"
-msgstr ""
+msgstr "Engadir proposta"
 
 #: templates/proposals/proposal_add.html:26
 msgid "Add new proposal"
-msgstr ""
+msgstr "Engadir nova proposta"
 
 #: templates/proposals/proposal_add.html:124
 #: templates/proposals/proposal_confirm_delete.html:26
-#: templates/proposals/proposal_edit.html:139
+#: templates/proposals/proposal_edit.html:137
 #: templates/proposals/proposal_list.html:47
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
 
 #: templates/proposals/proposal_add.html:125
-#: templates/proposals/proposal_edit.html:140
+#: templates/proposals/proposal_edit.html:138
 msgid "Publish"
-msgstr ""
+msgstr "Publicar"
 
 #: templates/proposals/proposal_add.html:130
 msgid "Admins/moderators read this"
-msgstr ""
+msgstr "Admins/moderadores lede isto"
 
 #: templates/proposals/proposal_add.html:131
 msgid ""
-"There are a lot more options in the proposals but they will appear only when "
-"you edit the proposal."
-msgstr ""
+"There are a lot more options in the proposals but they will appear only when"
+" you edit the proposal."
+msgstr "Existen moitas mais opcións nas propostas, pero solo aparecerán cando se edite a proposta."
 
 #: templates/proposals/proposal_add.html:133
 msgid "How to add new proposals"
-msgstr ""
+msgstr "Cómo engadir novas propostas"
 
 #: templates/proposals/proposal_add.html:135
 msgid "Title resuming the proposal, be concise (50 characters)"
-msgstr ""
+msgstr "Título resumindo a proposta, sexa conciso (50 caracteres)"
 
 #: templates/proposals/proposal_add.html:136
 msgid ""
 "Describe here your proposal with detail. You can add images or any other "
 "content."
-msgstr ""
+msgstr "Describe aqui a túa proposta con detalle. Podes engadir imaxes ou outro tipo de contido."
 
 #: templates/proposals/proposal_add.html:137
 msgid "Latitude/Longitude"
-msgstr ""
+msgstr "Latidude/Lonxitude"
 
 #: templates/proposals/proposal_add.html:137
 msgid "You'll have to put this if you want to locate the proposal in a map."
-msgstr ""
+msgstr "Terás que poñer isto se queres localizar a proposta nun mapa."
 
 #: templates/proposals/proposal_add.html:138
 msgid "Tags"
-msgstr ""
+msgstr "Etiquetas"
 
 #: templates/proposals/proposal_add.html:138
 msgid ""
-"Relevant tags for the proposal, p.e. where the proposal is localted, what is "
-"related to it, etc."
-msgstr ""
+"Relevant tags for the proposal, p.e. where the proposal is localted, what is"
+" related to it, etc."
+msgstr "Etiquetas importantes para a proposta, por exemplo, onde está localizada, cousas relacionadas, etc."
 
 #: templates/proposals/proposal_confirm_delete.html:4
 #: templates/proposals/proposal_confirm_delete.html:21
 msgid "Delete proposal"
-msgstr ""
+msgstr "Eliminar proposta"
 
 #: templates/proposals/proposal_confirm_delete.html:23
 msgid ""
 "Are you sure you want to delete this proposal? This action cannot be undone."
-msgstr ""
+msgstr "Estás seguro de querer eliminar esta proposta? Esta acción non se pode desfacer."
 
 #: templates/proposals/proposal_confirm_delete.html:27
 #: templates/proposals/proposal_list.html:22
 msgid "Delete"
-msgstr ""
+msgstr "Eliminar"
 
 #: templates/proposals/proposal_detail.html:5
 msgid "View proposal"
-msgstr ""
+msgstr "Ver proposta"
 
 #: templates/proposals/proposal_detail.html:56
 msgid "support"
-msgstr ""
+msgstr "soporte"
 
 #: templates/proposals/proposal_detail.html:61
 #: templates/proposals/proposal_list.html:34
 msgid "proposed by "
-msgstr ""
+msgstr "proposto por"
 
 #: templates/proposals/proposal_detail.html:61
 #: templates/proposals/proposal_list.html:34
 msgid " at "
-msgstr ""
+msgstr "ás"
 
 #: templates/proposals/proposal_edit.html:5
 #: templates/proposals/proposal_edit.html:22
 msgid "Edit proposal"
-msgstr ""
+msgstr "Editar proposta"
 
 #: templates/proposals/proposal_list.html:5
 msgid "View proposals"
-msgstr ""
+msgstr "Ver propostas"
 
 #: templates/proposals/proposal_list.html:19
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: templates/proposals/proposal_list.html:34
 msgid "comments"
-msgstr ""
+msgstr "comentarios"
 
 #: templates/proposals/proposal_list.html:43
 msgid "There are no proposals for this space"
-msgstr ""
+msgstr "Non hai propostas para este espazo."
 
 #: templates/proposals/proposal_list.html:53
 msgid "previous"
-msgstr ""
+msgstr "anterior"
 
 #: templates/proposals/proposal_list.html:56
 msgid "of"
-msgstr ""
+msgstr "de"
 
 #: templates/proposals/proposal_list.html:59
 msgid "next"
-msgstr ""
+msgstr "seguinte"
