--- a/src/e_cidadania/apps/staticpages/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/staticpages/locale/gl_ES/LC_MESSAGES/django.po
@@ -1,66 +1,67 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
+# Oscar Carballal <oscar@cidadania.coop>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-02-28 17:13+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Project-Id-Version: e-cidadania\n"
+"Report-Msgid-Bugs-To: http://dev.ecidadania.org/\n"
+"POT-Creation-Date: 2012-01-04 17:33+0100\n"
+"PO-Revision-Date: 2012-02-29 11:37+0000\n"
+"Last-Translator: Oscar Carballal <oscar@cidadania.coop>\n"
+"Language-Team: Galician (Spain) (http://www.transifex.net/projects/p/ecidadania/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: gl_ES\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: admin.py:39
 msgid "Description"
-msgstr ""
+msgstr "Descrición"
 
 #: admin.py:42
 msgid "Options"
-msgstr ""
+msgstr "Opcións"
 
 #: models.py:31
 msgid "Page Title"
-msgstr ""
+msgstr "Título da páxina"
 
 #: models.py:32
 msgid "URL"
-msgstr ""
+msgstr "URL"
 
 #: models.py:33
 msgid "Content"
-msgstr ""
+msgstr "Contido"
 
 #: models.py:34
 msgid "Show in footer"
-msgstr ""
+msgstr "Mostrar no pé de páxina"
 
 #: models.py:35
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: models.py:37
 msgid "Last update"
-msgstr ""
+msgstr "Última actualización"
 
 #: models.py:38
 msgid "Order"
-msgstr ""
+msgstr "Orde"
 
 #: models.py:42
 msgid "Static Pages"
-msgstr ""
+msgstr "Páxinas estáticas"
 
-#: templates/staticpages/staticpages_index.html:13
+#: templates/staticpages/staticpages_index.html:11
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
 
-#: templates/staticpages/staticpages_index.html:16
+#: templates/staticpages/staticpages_index.html:14
 msgid "last updated"
-msgstr ""
+msgstr "última actualización"
