--- a/src/e_cidadania/apps/proposals/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/proposals/locale/gl_ES/LC_MESSAGES/django.po
@@ -1,21 +1,22 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 # Oscar Carballal <oscar@cidadania.coop>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: e-cidadania\n"
-"Report-Msgid-Bugs-To: http://dev.ecidadania.org/\n"
-"POT-Creation-Date: 2012-01-04 17:33+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-03-08 12:08+0100\n"
 "PO-Revision-Date: 2012-02-29 11:35+0000\n"
 "Last-Translator: Oscar Carballal <oscar@cidadania.coop>\n"
-"Language-Team: Galician (Spain) (http://www.transifex.net/projects/p/ecidadania/language/gl_ES/)\n"
+"Language-Team: Galician (Spain) (http://www.transifex.net/projects/p/"
+"ecidadania/language/gl_ES/)\n"
+"Language: gl_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: gl_ES\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: admin.py:45
@@ -93,13 +94,13 @@ msgstr "Engadir nova proposta"
 
 #: templates/proposals/proposal_add.html:124
 #: templates/proposals/proposal_confirm_delete.html:26
-#: templates/proposals/proposal_edit.html:137
+#: templates/proposals/proposal_edit.html:139
 #: templates/proposals/proposal_list.html:47
 msgid "Go back"
 msgstr "Volver"
 
 #: templates/proposals/proposal_add.html:125
-#: templates/proposals/proposal_edit.html:138
+#: templates/proposals/proposal_edit.html:140
 msgid "Publish"
 msgstr "Publicar"
 
@@ -109,9 +110,11 @@ msgstr "Admins/moderadores lede isto"
 
 #: templates/proposals/proposal_add.html:131
 msgid ""
-"There are a lot more options in the proposals but they will appear only when"
-" you edit the proposal."
-msgstr "Existen moitas mais opcións nas propostas, pero solo aparecerán cando se edite a proposta."
+"There are a lot more options in the proposals but they will appear only when "
+"you edit the proposal."
+msgstr ""
+"Existen moitas mais opcións nas propostas, pero solo aparecerán cando se "
+"edite a proposta."
 
 #: templates/proposals/proposal_add.html:133
 msgid "How to add new proposals"
@@ -125,7 +128,9 @@ msgstr "Título resumindo a proposta, sexa conciso (50 caracteres)"
 msgid ""
 "Describe here your proposal with detail. You can add images or any other "
 "content."
-msgstr "Describe aqui a túa proposta con detalle. Podes engadir imaxes ou outro tipo de contido."
+msgstr ""
+"Describe aqui a túa proposta con detalle. Podes engadir imaxes ou outro tipo "
+"de contido."
 
 #: templates/proposals/proposal_add.html:137
 msgid "Latitude/Longitude"
@@ -141,9 +146,11 @@ msgstr "Etiquetas"
 
 #: templates/proposals/proposal_add.html:138
 msgid ""
-"Relevant tags for the proposal, p.e. where the proposal is localted, what is"
-" related to it, etc."
-msgstr "Etiquetas importantes para a proposta, por exemplo, onde está localizada, cousas relacionadas, etc."
+"Relevant tags for the proposal, p.e. where the proposal is localted, what is "
+"related to it, etc."
+msgstr ""
+"Etiquetas importantes para a proposta, por exemplo, onde está localizada, "
+"cousas relacionadas, etc."
 
 #: templates/proposals/proposal_confirm_delete.html:4
 #: templates/proposals/proposal_confirm_delete.html:21
@@ -153,7 +160,9 @@ msgstr "Eliminar proposta"
 #: templates/proposals/proposal_confirm_delete.html:23
 msgid ""
 "Are you sure you want to delete this proposal? This action cannot be undone."
-msgstr "Estás seguro de querer eliminar esta proposta? Esta acción non se pode desfacer."
+msgstr ""
+"Estás seguro de querer eliminar esta proposta? Esta acción non se pode "
+"desfacer."
 
 #: templates/proposals/proposal_confirm_delete.html:27
 #: templates/proposals/proposal_list.html:22
