--- a/src/e_cidadania/apps/debate/locale/gl_ES/LC_MESSAGES/djangojs.po
+++ b/src/e_cidadania/apps/debate/locale/gl_ES/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-03-08 12:09+0100\n"
+"POT-Creation-Date: 2012-03-12 12:34+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,40 +19,44 @@ msgstr ""
 
 #: static/js/debate_board.js:11
 msgid "Write here your title"
-msgstr ""
+msgstr "Escribe aquí o título"
 
 #: static/js/debate_board.js:12
 msgid "Write here your message"
-msgstr ""
+msgstr "Escribe aquí a mensaxe"
 
 #: static/js/debate_board.js:13
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: static/js/debate_board.js:14
-msgid "There has been an error."
-msgstr ""
+msgid "View"
+msgstr "Ver"
 
 #: static/js/debate_board.js:15
-msgid "Couldn't create note."
-msgstr ""
+msgid "There has been an error."
+msgstr "Houbo un erro."
 
 #: static/js/debate_board.js:16
-msgid "Couldn't get note data."
-msgstr ""
+msgid "Couldn't create note."
+msgstr "Non se puido crear a nota."
 
 #: static/js/debate_board.js:17
-msgid "Couldn't save note."
-msgstr ""
+msgid "Couldn't get note data."
+msgstr "Non se puido coller os datos da nota."
 
 #: static/js/debate_board.js:18
-msgid "Couldn't save note position."
-msgstr ""
+msgid "Couldn't save note."
+msgstr "Non se pudo gardar a nota."
 
 #: static/js/debate_board.js:19
-msgid "Couldn't delete note."
-msgstr ""
+msgid "Couldn't save note position."
+msgstr "Non se puido gardar a posición da nota."
 
 #: static/js/debate_board.js:20
+msgid "Couldn't delete note."
+msgstr "Non se puido eliminar a nota."
+
+#: static/js/debate_board.js:21
 msgid "Are you sure?"
-msgstr ""
+msgstr "Está seguro?"
