--- a/src/apps/ecidadania/debate/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/apps/ecidadania/debate/locale/gl_ES/LC_MESSAGES/django.po
@@ -1,21 +1,22 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 # Oscar Carballal <oscar@cidadania.coop>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: e-cidadania\n"
-"Report-Msgid-Bugs-To: http://code.ecidadania.org/\n"
-"POT-Creation-Date: 2012-05-24 10:12+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-14 12:52+0200\n"
 "PO-Revision-Date: 2012-05-24 08:16+0000\n"
 "Last-Translator: Oscar Carballal <oscar.carballal@cidadania.coop>\n"
-"Language-Team: Galician (Spain) (http://www.transifex.net/projects/p/ecidadania/language/gl_ES/)\n"
+"Language-Team: Galician (Spain) (http://www.transifex.net/projects/p/"
+"ecidadania/language/gl_ES/)\n"
+"Language: gl_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: gl_ES\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: models.py:42 models.py:107
@@ -27,8 +28,8 @@ msgid "Description"
 msgstr "Descrición"
 
 #: models.py:44
-msgid "Scope"
-msgstr "Ámbito"
+msgid "Theme"
+msgstr ""
 
 #: models.py:47 models.py:110
 msgid "Date created"
@@ -164,7 +165,9 @@ msgstr "Non pode ver este debate"
 msgid ""
 "It seems that the debate you're trying to access is either <strong>not "
 "started</strong> or it <strong>expired</strong>."
-msgstr "Pareceque o debate ao que tenta acceder ou <strong>non comezou</strong> ou <strong>caducou</strong>"
+msgstr ""
+"Pareceque o debate ao que tenta acceder ou <strong>non comezou</strong> ou "
+"<strong>caducou</strong>"
 
 #: templates/debate/debate_outdated.html:20
 msgid "Started on:"
@@ -183,8 +186,8 @@ msgid "Description:"
 msgstr "Descrición:"
 
 #: templates/debate/debate_view.html:24
-msgid "Scope:"
-msgstr "Ámbito:"
+msgid "Theme:"
+msgstr ""
 
 #: templates/debate/debate_view.html:27
 msgid "Start date:"
@@ -225,3 +228,9 @@ msgstr "100 caracteres"
 #: templates/debate/debate_view.html:122
 msgid "View note"
 msgstr "Ver a nota"
+
+#~ msgid "Scope"
+#~ msgstr "Ámbito"
+
+#~ msgid "Scope:"
+#~ msgstr "Ámbito:"
